Fix scrollbar

--- a/style.css
+++ b/style.css
@@ -5,15 +5,14 @@
   box-sizing: border-box;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-  display: none;
+::-webkit-scrollbar {
+  width:16px;
+  background:#E9E8E6;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-body {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+::-webkit-scrollbar-thumb {
+  background: #2D2D2D;
+  box-shadow: 0 -100vh 0 100vh #2D2D2D
 }
 
 html, body {
